tests/requests/invalid/chunked_05.py
from gunicorn.http.errors import InvalidHeader

request = InvalidHeader
